// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SqlManagementIssuePush should call onSubmit function correctly when enabling/disabling the configuration switch 1`] = `
<body>
  <div>
    <section
      class="css-zupqof"
    >
      <form
        class="ant-form ant-form-horizontal"
      >
        <div
          class="switch-field-wrapper"
        >
          <div
            class="ant-form-item has-label-tip css-1jlm9cy"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-no-colon"
                  title=""
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <span>
                        SQL管控问题推送
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <svg
                        color="#8a8f99"
                        height="16"
                        viewBox="0 0 14 14"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7 12.833A5.833 5.833 0 1 1 7 1.167a5.833 5.833 0 0 1 0 11.666m0-1.166a4.666 4.666 0 1 0 0-9.333 4.666 4.666 0 0 0 0 9.333m-.583-7.584h1.166V5.25H6.417zm0 2.334h1.166v3.5H6.417z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      />
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="ant-form-item css-1jlm9cy ant-form-item-has-success"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <button
                                    aria-checked="false"
                                    class="ant-switch basic-switch-wrapper system-config-switch css-g6dhbn"
                                    id="enabled"
                                    role="switch"
                                    type="button"
                                  >
                                    <div
                                      class="ant-switch-handle"
                                    />
                                    <span
                                      class="ant-switch-inner"
                                    >
                                      <span
                                        class="ant-switch-inner-checked"
                                      />
                                      <span
                                        class="ant-switch-inner-unchecked"
                                      />
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="config-field-wrapper"
          hidden=""
        >
          <div
            class="ant-form-item has-required-style has-label-tip css-1jlm9cy ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="minutesInterval"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      推送频率
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      手动输入Crontab格式时间，或点击右侧按钮开启可视化选择
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="css-1q8fejj"
                    >
                      <input
                        class="ant-input ant-input-status-success basic-input-wrapper input-element css-1pd1cd5"
                        placeholder="请输入时间"
                        type="text"
                        value="1 * * * *"
                      />
                      <button
                        class="ant-btn ant-btn-default ant-btn-lg ant-btn-icon-only button-element basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span
                          class="ant-btn-icon"
                        >
                          <svg
                            class="custom-icon custom-icon-date"
                            height="18"
                            viewBox="0 0 18 18"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.75.75v1.5h4.5V.75h1.5v1.5h3a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75h3V.75zM15 8.25H3v6h12zm-6.75 1.5v3H4.5v-3zm-3-6H3v3h12v-3h-2.25v1.5h-1.5v-1.5h-4.5v1.5h-1.5z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="pushUserList"
                  title="推送人"
                >
                  推送人
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x ant-select-multiple ant-select-show-arrow ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item"
                            style="opacity: 1;"
                          >
                            <span
                              class="ant-select-selection-item"
                              title="test"
                            >
                              <span
                                class="ant-select-selection-item-content"
                              >
                                test
                              </span>
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-item-remove"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="close"
                                  class="anticon anticon-close"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="ant-select-selection-overflow-item"
                            style="opacity: 1;"
                          >
                            <span
                              class="ant-select-selection-item"
                              title="test1"
                            >
                              <span
                                class="ant-select-selection-item-content"
                              >
                                test1
                              </span>
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-item-remove"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="close"
                                  class="anticon anticon-close"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="pushUserList_list_0"
                                aria-autocomplete="list"
                                aria-controls="pushUserList_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="pushUserList_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="pushUserList"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="down"
                          class="anticon anticon-down ant-select-suffix"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="down"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-15d6abf"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-no-colon"
                  title=" "
                >
                   
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                          type="submit"
                        >
                          <span>
                            提 交
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>
  <div
    class="ant-message ant-message-top"
    style="left: 50%; transform: translateX(-50%); top: 8px;"
  >
    <div
      class="ant-message-notice ant-message-notice-success"
    >
      <div
        class="ant-message-notice-content"
      >
        <div
          class="ant-message-custom-content ant-message-success"
        >
          <span
            aria-label="check-circle"
            class="anticon anticon-check-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="check-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
              />
            </svg>
          </span>
          <span>
            更新成功！
          </span>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`test SqlManagementIssuePush should render the component and display initial configuration correctly 1`] = `
<div>
  <section
    class="css-zupqof"
  >
    <form
      class="ant-form ant-form-horizontal"
    >
      <div
        class="switch-field-wrapper"
      >
        <div
          class="ant-form-item has-label-tip css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
            >
              <label
                class="ant-form-item-no-colon"
                title=""
              >
                <div
                  class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                >
                  <div
                    class="ant-space-item"
                    style="margin-right: 8px;"
                  >
                    <span>
                      SQL管控问题推送
                    </span>
                  </div>
                  <div
                    class="ant-space-item"
                  >
                    <svg
                      color="#8a8f99"
                      height="16"
                      viewBox="0 0 14 14"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M7 12.833A5.833 5.833 0 1 1 7 1.167a5.833 5.833 0 0 1 0 11.666m0-1.166a4.666 4.666 0 1 0 0-9.333 4.666 4.666 0 0 0 0 9.333m-.583-7.584h1.166V5.25H6.417zm0 2.334h1.166v3.5H6.417z"
                        fill="currentColor"
                      />
                    </svg>
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 12px;"
                    />
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="ant-form-item css-1jlm9cy"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <button
                                  aria-checked="true"
                                  class="ant-switch basic-switch-wrapper system-config-switch css-g6dhbn ant-switch-checked"
                                  id="enabled"
                                  role="switch"
                                  type="button"
                                >
                                  <div
                                    class="ant-switch-handle"
                                  />
                                  <span
                                    class="ant-switch-inner"
                                  >
                                    <span
                                      class="ant-switch-inner-checked"
                                    />
                                    <span
                                      class="ant-switch-inner-unchecked"
                                    />
                                  </span>
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="config-field-wrapper"
        hidden=""
      >
        <div
          class="ant-form-item has-required-style has-label-tip css-1jlm9cy ant-form-item-has-success"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
            >
              <label
                class="ant-form-item-required ant-form-item-no-colon"
                for="minutesInterval"
                title=""
              >
                <div
                  class="label-cont-custom"
                >
                  <div>
                    推送频率
                  </div>
                  <div
                    class="tip-content-box"
                  >
                    手动输入Crontab格式时间，或点击右侧按钮开启可视化选择
                  </div>
                </div>
              </label>
            </div>
            <div
              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="css-1q8fejj"
                  >
                    <input
                      class="ant-input ant-input-status-success basic-input-wrapper input-element css-1pd1cd5"
                      placeholder="请输入时间"
                      type="text"
                      value="* * * * *"
                    />
                    <button
                      class="ant-btn ant-btn-default ant-btn-lg ant-btn-icon-only button-element basic-button-wrapper css-geipcv"
                      type="button"
                    >
                      <span
                        class="ant-btn-icon"
                      >
                        <svg
                          class="custom-icon custom-icon-date"
                          height="18"
                          viewBox="0 0 18 18"
                          width="18"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M6.75.75v1.5h4.5V.75h1.5v1.5h3a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75h3V.75zM15 8.25H3v6h12zm-6.75 1.5v3H4.5v-3zm-3-6H3v3h12v-3h-2.25v1.5h-1.5v-1.5h-4.5v1.5h-1.5z"
                          />
                        </svg>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item has-required-style css-1jlm9cy"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
            >
              <label
                class="ant-form-item-required ant-form-item-no-colon"
                for="pushUserList"
                title="推送人"
              >
                推送人
              </label>
            </div>
            <div
              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    aria-required="true"
                    class="ant-select ant-select-in-form-item basic-select-wrapper css-iy4o4x ant-select-multiple ant-select-show-arrow ant-select-show-search"
                  >
                    <div
                      class="ant-select-selector"
                    >
                      <div
                        class="ant-select-selection-overflow"
                      >
                        <div
                          class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                          style="opacity: 1;"
                        >
                          <div
                            class="ant-select-selection-search"
                            style="width: 0px;"
                          >
                            <input
                              aria-activedescendant="pushUserList_list_0"
                              aria-autocomplete="list"
                              aria-controls="pushUserList_list"
                              aria-expanded="false"
                              aria-haspopup="listbox"
                              aria-owns="pushUserList_list"
                              aria-required="true"
                              autocomplete="off"
                              class="ant-select-selection-search-input"
                              id="pushUserList"
                              readonly=""
                              role="combobox"
                              style="opacity: 0;"
                              type="search"
                              unselectable="on"
                              value=""
                            />
                            <span
                              aria-hidden="true"
                              class="ant-select-selection-search-mirror"
                            >
                               
                            </span>
                          </div>
                        </div>
                      </div>
                      <span
                        class="ant-select-selection-placeholder"
                      >
                        请选择{{name}}
                      </span>
                    </div>
                    <span
                      aria-hidden="true"
                      class="ant-select-arrow"
                      style="user-select: none;"
                      unselectable="on"
                    >
                      <span
                        aria-label="down"
                        class="anticon anticon-down ant-select-suffix"
                        role="img"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="down"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-form-item css-15d6abf"
        >
          <div
            class="ant-row ant-form-item-row"
          >
            <div
              class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
            >
              <label
                class="ant-form-item-no-colon"
                title=" "
              >
                 
              </label>
            </div>
            <div
              class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
            >
              <div
                class="ant-form-item-control-input"
              >
                <div
                  class="ant-form-item-control-input-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 12px;"
                    >
                      <button
                        class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span>
                          取 消
                        </span>
                      </button>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <button
                        class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                        type="submit"
                      >
                        <span>
                          提 交
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="ant-descriptions system-config-view-wrapper css-1iwokd"
    >
      <div
        class="ant-descriptions-view"
      >
        <table>
          <tbody>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="3"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        推送频率
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <svg
                          color="#8a8f99"
                          height="14"
                          viewBox="0 0 14 14"
                          width="14"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M7 12.833A5.833 5.833 0 1 1 7 1.167a5.833 5.833 0 0 1 0 11.666m0-1.166a4.666 4.666 0 1 0 0-9.333 4.666 4.666 0 0 0 0 9.333m-.583-7.584h1.166V5.25H6.417zm0 2.334h1.166v3.5H6.417z"
                            fill="currentColor"
                          />
                        </svg>
                      </div>
                    </div>
                  </span>
                  <span
                    class="ant-descriptions-item-content"
                  >
                    下次推送时间为 2024-12-12 12:01:00
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="3"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    推送人
                  </span>
                  <span
                    class="ant-descriptions-item-content"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 8px;"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <span
                              class="ant-avatar ant-avatar-sm ant-avatar-circle action-avatar css-6ssfc7"
                            >
                              <span
                                class="ant-avatar-string"
                                style="transform: scale(1) translateX(-50%);"
                              >
                                T
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                        >
                          <div
                            class="ant-space-item"
                          >
                            <span
                              class="ant-avatar ant-avatar-sm ant-avatar-circle action-avatar css-6ssfc7"
                            >
                              <span
                                class="ant-avatar-string"
                                style="transform: scale(1) translateX(-50%);"
                              >
                                T
                              </span>
                            </span>
                          </div>
                        </div>
                      </div>
                    </div>
                  </span>
                </div>
              </td>
            </tr>
            <tr
              class="ant-descriptions-row"
            >
              <td
                class="ant-descriptions-item"
                colspan="3"
              >
                <div
                  class="ant-descriptions-item-container"
                >
                  <span
                    class="ant-descriptions-item-label"
                  >
                    最近一次推送时间
                  </span>
                  <span
                    class="ant-descriptions-item-content"
                  >
                    0001-01-01 08:05:43
                  </span>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </section>
</div>
`;

exports[`test SqlManagementIssuePush should set the form to edit state and fill in default values when the modify button is clicked 1`] = `
<body>
  <div>
    <section
      class="css-zupqof"
    >
      <form
        class="ant-form ant-form-horizontal"
      >
        <div
          class="switch-field-wrapper"
        >
          <div
            class="ant-form-item has-label-tip css-1jlm9cy"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-no-colon"
                  title=""
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center basic-tooltips-wrapper css-4jbtl9"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <span>
                        SQL管控问题推送
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <svg
                        color="#8a8f99"
                        height="16"
                        viewBox="0 0 14 14"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M7 12.833A5.833 5.833 0 1 1 7 1.167a5.833 5.833 0 0 1 0 11.666m0-1.166a4.666 4.666 0 1 0 0-9.333 4.666 4.666 0 0 0 0 9.333m-.583-7.584h1.166V5.25H6.417zm0 2.334h1.166v3.5H6.417z"
                          fill="currentColor"
                        />
                      </svg>
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      />
                      <div
                        class="ant-space-item"
                      >
                        <div
                          class="ant-form-item css-1jlm9cy ant-form-item-has-success"
                        >
                          <div
                            class="ant-row ant-form-item-row"
                          >
                            <div
                              class="ant-col ant-form-item-control"
                            >
                              <div
                                class="ant-form-item-control-input"
                              >
                                <div
                                  class="ant-form-item-control-input-content"
                                >
                                  <button
                                    aria-checked="true"
                                    class="ant-switch basic-switch-wrapper system-config-switch css-g6dhbn ant-switch-checked"
                                    id="enabled"
                                    role="switch"
                                    type="button"
                                  >
                                    <div
                                      class="ant-switch-handle"
                                    />
                                    <span
                                      class="ant-switch-inner"
                                    >
                                      <span
                                        class="ant-switch-inner-checked"
                                      />
                                      <span
                                        class="ant-switch-inner-unchecked"
                                      />
                                    </span>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="config-field-wrapper"
        >
          <div
            class="ant-form-item has-required-style has-label-tip css-1jlm9cy ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="minutesInterval"
                  title=""
                >
                  <div
                    class="label-cont-custom"
                  >
                    <div>
                      推送频率
                    </div>
                    <div
                      class="tip-content-box"
                    >
                      手动输入Crontab格式时间，或点击右侧按钮开启可视化选择
                    </div>
                  </div>
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="css-1q8fejj"
                    >
                      <input
                        class="ant-input ant-input-status-success basic-input-wrapper input-element css-1pd1cd5"
                        placeholder="请输入时间"
                        type="text"
                        value="1 * 2 * *"
                      />
                      <button
                        class="ant-btn ant-btn-default ant-btn-lg ant-btn-icon-only button-element basic-button-wrapper css-geipcv"
                        type="button"
                      >
                        <span
                          class="ant-btn-icon"
                        >
                          <svg
                            class="custom-icon custom-icon-date"
                            height="18"
                            viewBox="0 0 18 18"
                            width="18"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <path
                              d="M6.75.75v1.5h4.5V.75h1.5v1.5h3a.75.75 0 0 1 .75.75v12a.75.75 0 0 1-.75.75H2.25A.75.75 0 0 1 1.5 15V3a.75.75 0 0 1 .75-.75h3V.75zM15 8.25H3v6h12zm-6.75 1.5v3H4.5v-3zm-3-6H3v3h12v-3h-2.25v1.5h-1.5v-1.5h-4.5v1.5h-1.5z"
                            />
                          </svg>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item has-required-style css-1jlm9cy ant-form-item-has-success"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-required ant-form-item-no-colon"
                  for="pushUserList"
                  title="推送人"
                >
                  推送人
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      aria-required="true"
                      class="ant-select ant-select-in-form-item ant-select-status-success basic-select-wrapper css-iy4o4x ant-select-multiple ant-select-show-arrow ant-select-loading ant-select-show-search"
                    >
                      <div
                        class="ant-select-selector"
                      >
                        <div
                          class="ant-select-selection-overflow"
                        >
                          <div
                            class="ant-select-selection-overflow-item"
                            style="opacity: 1;"
                          >
                            <span
                              class="ant-select-selection-item"
                              title="1739544663515205632"
                            >
                              <span
                                class="ant-select-selection-item-content"
                              >
                                1739544663515205632
                              </span>
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-item-remove"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="close"
                                  class="anticon anticon-close"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="ant-select-selection-overflow-item"
                            style="opacity: 1;"
                          >
                            <span
                              class="ant-select-selection-item"
                              title="1739544663515205633"
                            >
                              <span
                                class="ant-select-selection-item-content"
                              >
                                1739544663515205633
                              </span>
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-item-remove"
                                style="user-select: none;"
                                unselectable="on"
                              >
                                <span
                                  aria-label="close"
                                  class="anticon anticon-close"
                                  role="img"
                                >
                                  <svg
                                    aria-hidden="true"
                                    data-icon="close"
                                    fill="currentColor"
                                    fill-rule="evenodd"
                                    focusable="false"
                                    height="1em"
                                    viewBox="64 64 896 896"
                                    width="1em"
                                  >
                                    <path
                                      d="M799.86 166.31c.02 0 .04.02.08.06l57.69 57.7c.04.03.05.05.06.08a.12.12 0 010 .06c0 .03-.02.05-.06.09L569.93 512l287.7 287.7c.04.04.05.06.06.09a.12.12 0 010 .07c0 .02-.02.04-.06.08l-57.7 57.69c-.03.04-.05.05-.07.06a.12.12 0 01-.07 0c-.03 0-.05-.02-.09-.06L512 569.93l-287.7 287.7c-.04.04-.06.05-.09.06a.12.12 0 01-.07 0c-.02 0-.04-.02-.08-.06l-57.69-57.7c-.04-.03-.05-.05-.06-.07a.12.12 0 010-.07c0-.03.02-.05.06-.09L454.07 512l-287.7-287.7c-.04-.04-.05-.06-.06-.09a.12.12 0 010-.07c0-.02.02-.04.06-.08l57.7-57.69c.03-.04.05-.05.07-.06a.12.12 0 01.07 0c.03 0 .05.02.09.06L512 454.07l287.7-287.7c.04-.04.06-.05.09-.06a.12.12 0 01.07 0z"
                                    />
                                  </svg>
                                </span>
                              </span>
                            </span>
                          </div>
                          <div
                            class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
                            style="opacity: 1;"
                          >
                            <div
                              class="ant-select-selection-search"
                              style="width: 0px;"
                            >
                              <input
                                aria-activedescendant="pushUserList_list_0"
                                aria-autocomplete="list"
                                aria-controls="pushUserList_list"
                                aria-expanded="false"
                                aria-haspopup="listbox"
                                aria-owns="pushUserList_list"
                                aria-required="true"
                                autocomplete="off"
                                class="ant-select-selection-search-input"
                                id="pushUserList"
                                readonly=""
                                role="combobox"
                                style="opacity: 0;"
                                type="search"
                                unselectable="on"
                                value=""
                              />
                              <span
                                aria-hidden="true"
                                class="ant-select-selection-search-mirror"
                              >
                                 
                              </span>
                            </div>
                          </div>
                        </div>
                      </div>
                      <span
                        aria-hidden="true"
                        class="ant-select-arrow ant-select-arrow-loading"
                        style="user-select: none;"
                        unselectable="on"
                      >
                        <span
                          aria-label="loading"
                          class="anticon anticon-loading anticon-spin"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="loading"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="0 0 1024 1024"
                            width="1em"
                          >
                            <path
                              d="M988 548c-19.9 0-36-16.1-36-36 0-59.4-11.6-117-34.6-171.3a440.45 440.45 0 00-94.3-139.9 437.71 437.71 0 00-139.9-94.3C629 83.6 571.4 72 512 72c-19.9 0-36-16.1-36-36s16.1-36 36-36c69.1 0 136.2 13.5 199.3 40.3C772.3 66 827 103 874 150c47 47 83.9 101.8 109.7 162.7 26.7 63.1 40.2 130.2 40.2 199.3.1 19.9-16 36-35.9 36z"
                            />
                          </svg>
                        </span>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-form-item css-15d6abf"
          >
            <div
              class="ant-row ant-form-item-row"
            >
              <div
                class="ant-col ant-col-11 ant-form-item-label ant-form-item-label-left"
              >
                <label
                  class="ant-form-item-no-colon"
                  title=" "
                >
                   
                </label>
              </div>
              <div
                class="ant-col ant-col-11 ant-col-push-2 ant-form-item-control"
              >
                <div
                  class="ant-form-item-control-input"
                >
                  <div
                    class="ant-form-item-control-input-content"
                  >
                    <div
                      class="ant-space ant-space-horizontal ant-space-align-center"
                    >
                      <div
                        class="ant-space-item"
                        style="margin-right: 12px;"
                      >
                        <button
                          class="ant-btn ant-btn-default basic-button-wrapper css-geipcv"
                          type="button"
                        >
                          <span>
                            取 消
                          </span>
                        </button>
                      </div>
                      <div
                        class="ant-space-item"
                      >
                        <button
                          class="ant-btn ant-btn-primary basic-button-wrapper css-geipcv"
                          type="submit"
                        >
                          <span>
                            提 交
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
    </section>
  </div>
</body>
`;
